# HyperAgent

./: .gitattributes  .gitignore  .gitmessage  BRANCH_SETUP_COMPLETE.md  BRANCH_WORKFLOW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  (+1 more)
GUIDE/: API.md  COLLABORATOR_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCKER.md  GETTING_STARTED.md  SUPABASE_CONNECTION_FIX.md  USER_GUIDE.md
alembic/: env.py
docs/: ALIGNMENT_REPORT.md  API_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  CONFIGURATION.md  DEPLOYMENT.md  ENHANCEMENTS.md  HYPERION_PEF_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION.md  KNOWN_ISSUES.md  METISVM_OPTIMIZATION.md  NETWORKS.md  NETWORK_COMPATIBILITY.md  PRODUCTION_READINESS.md  QUICK_START.md  REMOTE_SETUP.md  SECURITY_AUDIT.md  TESTING_SETUP_GUIDE.md  TROUBLESHOOTING.md  complete-tech-spec.md
examples/: hyperion_workflow.json  mantle_workflow.json  report.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json
hyperagent/: __init__.py
scripts/: __init__.py  backup_database.py  check_workflow_status.py  deploy_production.py  docker_build.sh  docker_run.sh  generate_workflow_report.py  init_pgvector.sql  rollback.py  seed_contract_templates.py  sync_main_branch.bat  sync_main_branch.sh  verify_setup.py  verify_wallet.py
templates/: erc20_basic.json  erc20_burn.json  erc721_basic.json  simple_storage.json
tests/: README.md  __init__.py  conftest.py
(+182 files in other folders)
