[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperagent"
version = "1.0.0"
description = "AI Agent Platform for On-Chain Smart Contract Generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
hyperagent = "hyperagent.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

